# tauri-specta

./: Cargo.toml  pnpm-lock.yaml
examples/app/src-tauri/: Cargo.toml
examples/custom-plugin/app/src/: App.tsx  bindings.ts
examples/custom-plugin/app/src-tauri/: Cargo.toml
examples/custom-plugin/app/src-tauri/src/: main.rs
